Add CSS to Portfolio and updated HTML

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
 
   <body>
@@ -11,15 +12,15 @@
       <h1>About Me</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about-me.html">About Me</a></li>
+          <li class="navbar"><a href="index.html">Home</a></li>
+          <li class="navbar"><a href="about-me.html">About Me</a></li>
         </ul>
       </nav>
     </header>
 
     <article>
-      <h4>My History</h4>
-      <p>After graduating from Iowa State University, I have worked for a variety of companies in both accounting and writing.
+      <h3 class="header">My History</h3>
+      <p class="paragraph">After graduating from Iowa State University, I have worked for a variety of companies in both accounting and writing.
       Today, I continue to complete freelance work for both industries.  Now, that I am learning to code, I will be able
       to expand these talents to a whole new industry.</p>
     </article>
