--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
 
   <body>
@@ -11,15 +12,15 @@
       <h1>My Portfolio</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about-me.html">About Me</a></li>
+          <li class="navbar"><a href="index.html">Home</a></li>
+          <li class="navbar"><a href="about-me.html">About Me</a></li>
         </ul>
       </nav>
     </header>
 
     <article>
       <h2>List of Upcoming Projects</h2>
-      <p>A snapshot of new projects coming this fall</p>
+      <p class="descrip">A snapshot of new projects coming this fall</p>
       <ol>
         <li>
           <h3>Visiting Canada</h3>
@@ -38,7 +39,7 @@
 
     <article>
       <h2>Completed Projects</h2>
-      <p>Here is a project I have completed in the past</p>
+      <p class="descrip">Here is a project I have completed in the past</p>
         <h3>New Zealand Page</h3>
         <p>A page highlighting travel to New Zealand</p>
         <img src="images/new-zealand.jpg" width="400" height="300" alt="Photo of New Zealand Glaciar.">
