Add flexbox and Awesome Fonts and Google Fonts

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <script src="https://kit.fontawesome.com/9ab8b20a93.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
 
@@ -22,12 +23,25 @@
       <h3 class="header">My History</h3>
       <p class="paragraph">After graduating from Iowa State University, I have worked for a variety of companies in both accounting and writing.
       Today, I continue to complete freelance work for both industries.  Now, that I am learning to code, I will be able
-      to expand these talents to a whole new industry.</p>
+      to expand these talents to a whole new industry, including photography.  Check out some of my newest photos below.</p>
     </article>
+
+    <section>
+      <h3 class="header">Photo Gallary</h3>
+      <div class="container">
+        <img src="images/duke.jpg" width="300" height="400" alt="Photo of Duke the dog.">
+        <img src="images/new-zealand.jpg" width="300" height="200" alt="Photo of New Zealand Glaciar.">
+        <img src="images/quebec.jpg" width="300" height="200" alt="Photo of Quebec City.">
+    </div>
+    </section>
 
 
     <footer>
       <h6>&copy; Copyright. All Rights Reserved.</h6>
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter-square"></i>
+      <i class="fab fa-snapchat-square"></i>
+      <i class="fab fa-instagram"></i>
     </footer>
   </body>
 
