--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>My Portfolio</title>
+    <script src="https://kit.fontawesome.com/9ab8b20a93.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Basic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
 
@@ -48,6 +51,10 @@
 
     <footer>
       <h6>&copy; Copyright. All Rights Reserved.</h6>
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter-square"></i>
+      <i class="fab fa-snapchat-square"></i>
+      <i class="fab fa-instagram"></i>
     </footer>
   </body>
 
