Add css styling

--- a/about-me.html
+++ b/about-me.html
@@ -35,6 +35,16 @@
     </div>
     </section>
 
+    <section>
+      <h3 class="header">Credentials</h3>
+      <ol class="credentials">
+        <li>Bachelors Degree in Accounting</li>
+        <li>Bachelors Degree in Spanish</li>
+        <li>Freelance Writer for multiple media outlets</li>
+        <li>Certificate in HTML and CSS</li>
+      </ol>
+    </section>
+
 
     <footer>
       <h6>&copy; Copyright. All Rights Reserved.</h6>
