--- a/about-me.html
+++ b/about-me.html
@@ -15,6 +15,7 @@
         <ul>
           <li class="navbar"><a href="index.html">Home</a></li>
           <li class="navbar"><a href="about-me.html">About Me</a></li>
+          <li class="navbar"><a href="contact.html">Contact Me</a></li>
         </ul>
       </nav>
     </header>
